--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,151 @@
 body {
   font-family: Verdana, Geneva, sans-serif;
   background: #ddd;
-  margin-top: 18px;
+  margin:0;
+  padding:0;
+  margin-top: 19px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+a {
+  color: blue;
+  text-decoration: none;
 }
 a:visited {
   color: blue;
 }
+b {
+  font-weight: 500;
+}
+h1,h2,h3 {
+  font-weight: 300;
+  margin: 0;
+}
+h1 {
+  margin-top: 0.25em;
+}
+h4 {
+  font-weight: 300;
+  font-size: 22px;
+  margin: 0.5em 1%;
+}
+
+.logo img {
+  vertical-align: middle;
+}
+.login input {
+  display: block;
+  width: 100%;
+  margin: 12px 0;
+}
+.waive-green {
+  color: #25c155;
+}
+.map img {
+  margin-top: 6px;
+  width: 100%;
+}
 .map {
   width: 100%;
+  margin-bottom: 8px;
+}
+.map span {
+  display: block;
 }
 #account-link {
   position: absolute;
   top: 0;
   right: 0;
-  background: black;
-  color: white;
-  text-decoration: none;
-  padding: 2px 5px;
+  color: #44a;
+  padding: 0px 5px 2px;
 }
 .button {
+  text-align: center;
   display: inline-block;
   padding: 4px;
-  text-decoration: none;
+  font-size: 12px;
   border: 1px solid blue;
+  color: blue;
+  background: white;
 }
 
+.action-list {
+  font-size: 0;
+}
 .action-list a {
   display: inline-block;
-  margin: 0.5em;
-  padding: 0.5em;
   font-size: 12px;
-  text-decoration: none;
-  border: 1px solid blue;
+  margin: 2% 1%;
+  padding: 2% 1%;
+  text-align: center;
+  font-size: 12px;
 }
 .box,.car-row {
+  display:inline-block;
+  text-align: left;
   background: #fff;
-  padding: 4px;
+  padding: 1%;
   margin-bottom: 6px;
+  width: 94%;
+  max-width: 400px;
   border-radius: 4px;
-  box-shadow: 0 0 6px 1px rgba(0,0,0,0.4);
+  box-shadow: 0 0 6px 2px rgba(64,64,64,0.3);
+}
+.login {
+  padding: 5%;
+  text-align: center;
+  max-width: 85%;
 }
 .car-row .button {
   float:right;
 }
 
-.location-link {
+.wid-1 {
+  width: 100%;
+  margin: -1px;
+}
+.wid-2 {
+  width: 45.4%;
+}
+.image-upload {
+  width: 38%;
+  text-align: center;
+  display: inline-block;
+  border: 1px solid #888;
+  position: relative;
+  padding: 12% 4%;
+  overflow: hidden;
+}
+.image-upload input {
+  vertical-align: middle;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 1000px;
+  opacity: 0;
+}
+.danger {
+  color: red !important;
+  border: 1px solid red;
+}
+small {
+  color: #444;
+  font-size: 70%;
+}
+.needsjs {
+  color: #aaa;
   text-decoration: none;
 }
-
-.car-row h3 {
-  margin: 0;
+#sorter {
+  text-align: center;
+  margin-right: 10px;
 }
-.car-row h2 {
-  margin: 0;
+#sorter a {
+  margin: 0 0 0 10px;
+}
+.box.error {
+  background: rgb(255,216,216);
+  font-weight: 400;
+  padding: 0.5em;
 }
