--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Verdana, Geneva, sans-serif;
-  background: #ddd;
+  background: #e8e8e8;
   margin:0;
   padding:0;
   margin-top: 19px;
@@ -95,7 +95,7 @@ h4 {
   width: 94%;
   max-width: 400px;
   border-radius: 4px;
-  box-shadow: 0 0 6px 2px rgba(64,64,64,0.3);
+  box-shadow: 0 0 6px 2px rgba(96,96,96,0.2);
 }
 .login {
   padding: 5%;
