--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ a:active {
   margin-bottom: 3px;
   width: 96%;
 }
-.car-row * { 
+.car-row  { 
   line-height: 28px;
 }
 .car-row .button {
@@ -179,4 +179,15 @@ a:active {
   background: rgb(255,216,216);
   font-weight: 400;
   padding: 0.5em;
+}
+.fuel-meter {
+  width: 100%;
+  height: 3px;
+  background: #ddd;
+  margin-top: -3px;
+}
+
+.fuel-amount {
+  height: 100%;
+  background: #7d7;
 }
