--- a/css/styles.css
+++ b/css/styles.css
@@ -96,15 +96,18 @@ a:active {
   font-size: 12px;
 }
 .box {
-  display:inline-block;
+  display:block;
   text-align: left;
-  background: #fff;
+  background: white;
   padding: 1%;
-  margin-bottom: 6px;
+  margin: 0 auto 6px auto;
   width: 94%;
   max-width: 400px;
   border-radius: 4px;
   box-shadow: 0 0 6px 2px rgba(96,96,96,0.2);
+}
+.center {
+  text-align: center;
 }
 .car-label, .car-distance {
   display: inline-block;
@@ -138,7 +141,7 @@ a:active {
 }
 
 .wid-1 {
-  width: 100%;
+  width: 98%;
   margin: -1px;
 }
 .wid-2 {
