--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@ small {
   color: #444;
   font-size: 70%;
 }
+ol  {
+  padding-left: 22px;
+}
 a:active {
   background: blue;
   color: white;
@@ -86,7 +89,6 @@ a:active {
   text-align: center;
   display: inline-block;
   padding: 4px;
-  font-size: 12px;
   border: 1px solid blue;
   color: blue;
   background: white;
@@ -158,22 +160,10 @@ a:active {
 .wid-2 {
   width: 44.8%;
 }
-.image-upload {
-  width: 38%;
-  text-align: center;
-  display: inline-block;
-  border: 1px solid #888;
-  position: relative;
-  padding: 12% 4%;
-  overflow: hidden;
-}
 .image-upload input {
   vertical-align: middle;
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 1000px;
-  opacity: 0;
+  width: 98%;
+  padding: 2% 0;
 }
 .danger {
   color: red !important;
@@ -210,4 +200,7 @@ a:active {
   width: 100%;
   font-size: 14px;
   margin-top: 14px;
+}
+.submit {
+  margin-top: 18px;
 }
