--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 h1,h2,h3,body,ul,li { margin: 0; padding: 0 }
 body {
   font-family: Verdana, Geneva, sans-serif;
-  background: #e8e8e8;
+  background: #E9E9Ec;
   margin-top: 19px;
   width: 100%;
   height: 100%;
@@ -57,10 +57,10 @@ a:active {
   text-align: center;
 }
 .logo img {
-  vertical-align: middle;
+  margin-right: 10px;
 }
 .login h1 {
-  margin-bottom: 50px;
+  margin: 3% 0 8%;
 }
 .login input {
   display: block;
