--- a/css/styles.css
+++ b/css/styles.css
@@ -231,6 +231,12 @@ a.danger {
   font-weight: 400;
   padding: 0.5em;
 }
+.error p {
+  margin: 0 0 0.5em;
+}
+.error a.button {
+  padding: 0.25em 0.5em;
+}
 .fuel-meter {
   width: 100%;
   height: 3px;
