--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ a:active {
 #account-link:active {
   color: white;
 }
-.button {
+.btn {
   text-align: center;
   display: inline-block;
   padding: 4px;
@@ -163,7 +163,7 @@ a:active {
 .car-label {
   width: 45%;
 }
-.car-name {
+.car-row h3 {
   font-size: 22px;
 }
 .login {
@@ -172,7 +172,7 @@ a:active {
   max-width: 85%;
 }
 
-.car-row {
+.car-row li {
   display:block;
   text-align: left;
   background: #fff;
@@ -184,7 +184,7 @@ a:active {
 .car-row a {
   line-height: 15px;
 }
-.car-row .button {
+.car-row .btn {
   float:right;
   line-height: 16px;
 }
@@ -268,18 +268,18 @@ a.danger {
 .error p {
   margin: 0 0 0.5em;
 }
-.error a.button {
+.error a.btn {
   padding: 0.25em 0.5em;
   background: rgba(255,255,255,0.4);
 }
-.fuel-meter {
+.fuel {
   width: 100%;
   height: 3px;
   background: #ddd;
   margin-top: -3px;
 }
 
-.fuel-amount {
+.fuel div {
   height: 100%;
   background: #7d7;
 }
