--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h1 {
 h4 {
   font-weight: 300;
   font-size: 22px;
-  margin: 0.5em 1%;
+  margin: 18px 0;
 }
 small {
   color: #444;
@@ -123,6 +123,9 @@ a:active, a.btn:active {
 .action-list {
   font-size: 0;
 }
+.action-list li {
+  display: inline;
+} 
 .action-list a {
   display: inline-block;
   margin: 2% 1%;
@@ -137,7 +140,6 @@ a:active, a.btn:active {
   padding: 1% 2%;
   margin: 0 auto 6px auto;
   width: 94%;
-  border-radius: 4px;
   box-shadow: 0 0 6px 2px rgba(96,96,96,0.2);
 }
 .center {
@@ -179,14 +181,14 @@ a:active, a.btn:active {
 }
 
 .wid-1, .wid-2 {
-  padding: 1% 0;
+  padding: 9px 0;
 }
 .wid-1 {
   width: 100%;
-  margin: 2% -1px;
+  margin: 9px -1px;
 }
 .wid-2 {
-  width: 44.8%;
+  width: 45.2%;
 }
 .image-upload input {
   vertical-align: middle;
@@ -231,6 +233,25 @@ a.danger:active {
 }
 #sorter a {
   margin: 0 0 0 10px;
+}
+.box.prompt {
+  padding: 0;
+  width: 96%;
+}
+.prompt .content, .prompt h1 {
+  padding: 15px 22px;
+}
+.prompt .copy {
+  padding: 4px 0;
+}
+.prompt .actions {
+}
+.prompt h1 {
+  background: rgb(127,127,140);
+  font-weight: bold;
+  font-size: 22px;
+  color: white;
+  margin: 0;
 }
 .box.error {
   background: rgb(255,216,216, 0.4);
