--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,10 @@ h1,h2,h3,body,ul,li { margin: 0; padding: 0 }
 body {
   font-family: Verdana, Geneva, sans-serif;
   background: #E9E9Ec;
-  margin-top: 19px;
   width: 100%;
   height: 100%;
   font-size: 15px;
+  margin-top: 20px;
   text-align: center;
 }
 a {
@@ -37,9 +37,10 @@ small {
 ol  {
   padding-left: 22px;
 }
-a:active, a.btn:active {
+a:active, .btn:active, a.btn:active {
   background: blue;
   color: white !important;
+  outline: 0;
   box-shadow: 0 0 0px 5px blue;
 }
 .isolated {
@@ -47,23 +48,31 @@ a:active, a.btn:active {
   margin: 1em;
   display:inline-block;
 }
+.box.gettocar {
+  padding-top: 8px;
+}
 .gettocar h4 {
   text-align: center;
 }
-.logo img {
+.box.login {
+  padding: 20px;
+  box-sizing: border-box;
+}
+.login img {
   margin-right: 10px;
+  vertical-align: top;
 }
 .login h1 {
-  margin: 3% 0 8%;
+  margin: 18px 0 24px;
+  text-align:center;
 }
 .login input {
-  display: block;
-  width: 99%;
-  font-size: 24px;
-  margin: 12px -3px;
-  padding: 0.5%; 
-}
-.login input[type="submit"] {
+  display: inline-block;
+  font-size: 18px;
+  margin: 6px -1px;
+  padding: 4px 0;
+  text-indent: 10px;
+  border-width: 1px;
   width: 100%;
 }
 .waive-green {
@@ -77,22 +86,18 @@ a:active, a.btn:active {
   position: relative;
 }
 .map .nop {
-  box-shadow: inset 0px 0px 2px #777;
   background: url('/img/circle-logo_32.gif') no-repeat;
   background-position: center;
 }
 .map img {
   min-height: 150px;
   max-width: 100%;
+  box-shadow: 0px 0px 1px #777;
   background: url('/img/ajax-loader.gif') no-repeat;
   background-position: center; 
 }
-.map span {
-  display: block;
-}
 .map .content {
   display: inline-block;
-  margin-top: 6px;
 }
 .map-controls {
   position: relative;
@@ -101,15 +106,14 @@ a:active, a.btn:active {
 }
 .map-controls a {
   background: rgba(240,240,255,0.9);
-  box-shadow: inset 0px 0px 1px #222;
   border-width: 0;
   padding: 3px 8px;
   margin: 0 0.5em 0 0;
 }
-#account-link {
-  position: absolute;
-  top: 0;
-  right: 5px;
+#acnt {
+  display:block;
+  text-align:right;
+  margin: -20px 4px 0 0;
 }
 .btn {
   text-align: center;
@@ -119,12 +123,9 @@ a:active, a.btn:active {
   background: rgba(0,0,255,0.03);
   color: blue;
 }
-
-.action-list {
-  font-size: 0;
-}
 .action-list li {
   display: inline;
+  font-size: 0;
 } 
 .action-list a {
   display: inline-block;
@@ -156,11 +157,6 @@ a:active, a.btn:active {
 }
 .car-row h3 {
   font-size: 22px;
-}
-.login {
-  padding: 5%;
-  text-align: center;
-  max-width: 85%;
 }
 
 .car-row li {
@@ -227,12 +223,8 @@ a.danger:active {
   color: #aaa;
   text-decoration: none;
 }
-#sorter {
-  text-align: center;
-  margin-right: 10px;
-}
 #sorter a {
-  margin: 0 0 0 10px;
+  margin: 0 5px;
 }
 .box.prompt {
   padding: 0;
@@ -243,8 +235,6 @@ a.danger:active {
 }
 .prompt .copy {
   padding: 4px 0;
-}
-.prompt .actions {
 }
 .prompt h1 {
   background: rgb(127,127,140);
