--- a/css/styles.css
+++ b/css/styles.css
@@ -280,14 +280,14 @@ a.danger:active {
   padding: 0.25em 0.5em;
   background: rgba(255,255,255,0.4);
 }
-.fuel {
+.car-label p {
   width: 100%;
   height: 3px;
   background: #ddd;
-  margin-top: -3px;
+  margin: -3px 0 0 0;
 }
-
-.fuel div {
+.car-label p b {
+  display: block;
   height: 100%;
   background: #7d7;
 }
