--- a/www/style.css
+++ b/www/style.css
@@ -32,7 +32,7 @@ h4 {
 }
 small {
   color: #444;
-  font-size: 70%;
+  font-size: 0.8rem;
 }
 ol {
   padding-left: 16px;
@@ -84,9 +84,6 @@ form input[type="submit"] {
   text-indent: 10px;
   border-width: 1px;
   width: 100%;
-}
-form input[type="file"] {
-  font-size: 14px;
 }
 .waive-green {
   color: #25c155;
@@ -205,7 +202,13 @@ form input[type="file"] {
   vertical-align: middle;
   width: 98%;
   padding: 0.25rem 0;
-  margin-left: 0;
+  text-indent: -0.25rem;
+  margin-left: 0.25rem;
+}
+.ingroup,.ingroup * {
+  font-size: 0.8rem;
+  font-family: sans-serif;
+  color: #444;
 }
 .preferred {
   color: rgb(0,64,0);
