--- a/www/style.css
+++ b/www/style.css
@@ -30,6 +30,9 @@ h4 {
   font-size: 22px;
   margin: 18px 0;
 }
+h1 small {
+  font-size: 22px;
+}
 small {
   color: #444;
   font-size: 0.8rem;
@@ -70,11 +73,12 @@ a:active, .btn:active, a.btn:active {
   text-align:center;
 }
 form input {
+  font-family: Verdana, Geneva, sans-serif;
   display: block;
   width: 99%;
-  font-size: 24px;
+  font-size: 18px;
   margin: 12px -3px;
-  padding: 0.5%; 
+  padding: 0.25rem 0.5%; 
 }
 form input[type="submit"] {
   display: inline-block;
@@ -128,8 +132,10 @@ form input[type="submit"] {
   margin: -20px 4px 0 0;
 }
 .btn {
+  font-family: Verdana, Geneva, sans-serif;
   text-align: center;
   display: inline-block;
+  font-size: 14px;
   padding: 4px;
   border: 1px solid blue;
   background: rgba(0,0,255,0.03);
@@ -169,6 +175,7 @@ form input[type="submit"] {
 }
 .car-row h3 {
   font-size: 22px;
+  margin-top: 2px;
 }
 
 .car-row li {
@@ -241,6 +248,7 @@ a.danger:active {
 #sorter {
   text-align: center;
   margin-right: 10px;
+  padding-bottom: 3px;
 }
 #sorter a {
   margin: 0 5px;
@@ -295,7 +303,7 @@ a.danger:active {
   width: 100%;
   height: 3px;
   background: #ddd;
-  margin: -3px 0 0 0;
+  margin: -1px 0 0 0;
 }
 .car-label p b {
   display: block;
