--- a/www/style.css
+++ b/www/style.css
@@ -51,11 +51,8 @@ a:active, .btn:active, a.btn:active {
 }
 .isolated {
   padding: 0.25em;
-  margin: -8px 0 12px;
+  margin: 0 0 12px;
   display:inline-block;
-}
-a.isolated { 
-  text-decoration: underline;
 }
 .box.gettocar {
   padding-top: 8px;
