--- a/www/style.css
+++ b/www/style.css
@@ -133,6 +133,7 @@ form input[type="submit"] {
 }
 .btn-group {
   text-align: center;
+  padding-bottom: 1rem;
 }
 .btn {
   font-family: Verdana, Geneva, sans-serif;
