--- a/www/style.css
+++ b/www/style.css
@@ -202,6 +202,12 @@ input[type="file"] {
 .car-label, .car-distance {
   display: inline-block;
 }
+.charger-distance { 
+  font-size: 13px;
+  line-height: 19px;
+  color: #555;
+  margin-left: 0.25rem;
+}
 .car-label {
   width: 45%;
 }
@@ -216,7 +222,7 @@ input[type="file"] {
   background: #fff;
   padding: 8px;
   margin-top: 4px;
-  line-height: 28px;
+  line-height: 26px;
   width: auto;
 }
 .car-row a {
@@ -395,4 +401,35 @@ a.danger:active {
   line-height:1.75rem;
   background: #DADAE3;
   color: #447;
+}
+.port-list {
+  display:inline-block;
+  width: 45%;
+  vertical-align: text-top;
+}
+.port-list em {
+  font-size: 18px;
+  font-style: normal;
+  color: #bbb;
+}
+.port-list span {
+  display:block;
+  font-size: 12px;
+  color: #333;
+  margin-bottom: -0.25rem;
+}
+.port-list a {
+  display: inline-block;
+  border: 1px solid #99F;
+  text-align: center;
+  padding: 4px;
+  opacity: 0.7;
+  width: 3.5rem;
+  margin: 0 0.5rem 0 0;
+  font-size: 12px;
+  font-family: monospace;
+}
+.port-list a img{
+  display: block;
+  margin: 0 auto 0.5rem;
 }
