--- a/www/parking.css
+++ b/www/parking.css
@@ -9,19 +9,36 @@ span {
 }
 .car-name {
   display: inline-block;
-  padding: 0.25rem 0.5rem;
-  margin-bottom: 0.25rem;
+  margin: 0.25rem 0;
   text-decoration: none;
   border-radius: 5px;
   font-size: 18px;
 }
 .car-sheet {
   width: 380px;
-  padding: 10px;
-  margin: 5px;
+  padding: 0.5rem;
+  margin: 0.5rem;
   box-shadow: 0 0 2px grey;
   height: 240px;
   vertical-align: top;
+  position: relative;
+}
+.action {
+  position: absolute;
+  bottom: 0.75rem;
+  right: 0.5rem;
+}
+.action a.danger {
+  border: 1px solid red;
+  color: red;
+  padding: 0.12rem;
+  margin: 0.12rem;
+  font-size: 10px;
+}
+.action a {
+  border: 1px solid blue;
+  color: blue;
+  padding: 0.25rem;
 }
 .info {
   font-size: 12px;
@@ -65,10 +82,11 @@ body {
   cursor: default;
 }
 .guess-wrap {
-  margin-top: 2rem;
+  margin-top: 0.5rem;
 }
 .guess {
   background: powderblue;
+  display: none;
 }
 .guess div {
   padding: 0.25rem 0.5rem;
