--- a/www/parking.css
+++ b/www/parking.css
@@ -2,6 +2,7 @@ a {
   text-decoration: none;
 }
 body {
+  margin: 0;
   font-family: sans-serif;
 }
 span {
@@ -17,7 +18,7 @@ span {
 .car-sheet {
   width: 380px;
   padding: 0.5rem;
-  margin: 0.5rem;
+  margin: 0 0.5rem 0.5rem 0;
   box-shadow: 0 0 2px grey;
   height: 240px;
   vertical-align: top;
