--- a/www/style.css
+++ b/www/style.css
@@ -4,7 +4,7 @@ body {
   background: #ECECEF;
   width: 100%;
   height: 100%;
-  max-width: 600px;
+  max-width: 700px;
   margin: auto;
   font-size: 15px;
   margin-top: 20px;
@@ -43,6 +43,10 @@ a:active, .btn:active, a.btn:active {
   box-shadow: 0 0 0 5px blue;
   z-index: 1000;
   position: relative;
+}
+th,td {
+  background: #fff;
+  text-align: left;
 }
 .isolated {
   padding: 0.25em;
@@ -136,7 +140,7 @@ form select {
   position: absolute;
 }
 .map .nop {
-  background: url('/img/circle-logo_32.gif') no-repeat;
+  background: url('/img/cl32.gif') no-repeat;
   background-position: center;
 }
 .map img {
@@ -408,7 +412,7 @@ a.danger:active {
   margin-top: 18px;
 }
 #ajax {
-  background: url('/img/circle-logo_32.gif');
+  background: url('/img/cl32.gif');
   width: 32px;
   height: 32px;
 }
