--- a/www/parking.css
+++ b/www/parking.css
@@ -22,7 +22,7 @@ img {
 }
 .car-sheet {
   width: 380px;
-  padding: 0.25rem;
+  padding: 0 0.25rem 0 0;
   margin: 0 0.25rem 0.5rem 0;
   box-shadow: 0 0 2px grey;
   height: 240px;
@@ -49,6 +49,7 @@ img {
   padding: 0.25rem;
 }
 .info {
+  padding: 0.5rem 0;
   font-size: 12px;
   width: 50%;
 }
