--- a/www/parking.css
+++ b/www/parking.css
@@ -30,6 +30,9 @@ img {
   position: relative;
   font-size:0;
 }
+.pinned {
+  box-shadow: 0px 0px 0 4px rgba(64,96,64,0.5) inset;
+}
 .action {
   position: absolute;
   bottom: 0.5rem;
@@ -51,16 +54,15 @@ img {
 .info {
   padding: 0.5rem 0;
   font-size: 12px;
+  padding-left: 1%;
   width: 50%;
 }
 .img-wrap {
+  background: rgba(216,216,216,0.3);
   width: 48%;
   overflow: hidden;
   height: 100%;
   vertical-align: top;
-}
-.info {
-  padding-left: 2%;
 }
 .park-claim {
   font-size: 1em;
